# nix_qt

./: .clangd  .gitignore  CMakeLists.txt  README.md  flake.nix  main.cpp
